Update security-setup.sh